@@ -5,6 +5,11 @@ Change History
 1.8.0b5 (unreleased)
 --------------------
 
+- Get email settings from registry.  Fixes several Plone 5 errors.
+  Do not use ``plone_utils.getSiteEncoding()``, because this is
+  deprecated and always returns ``utf-8''.
+  [maurits]
+
 - Load widget specific css on quickedit form.
   [maurits]
 
